# FileManagerCLI

./: .gitignore  README.md  pyproject.toml
src/filebunny/: __init__.py  cli.py  manager.py  storage.py  utils.py
src/filebunny.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_manager.py
