[project]
name = "filebunny"
version = "1.0.0"
description = "A Bunny CLI file manager"
requires-python = ">=3.10"
dependencies = ["platformdirs"]

[project.scripts]
filebunny = "filebunny.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
